<resources>
    <string name="app_name">HealthJourneyApp</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="register">Confirmar</string>
    <string name="click_to_login">Presione para acceder</string>
    <string name="click_to_register">Presione para registrarse</string>
    <string name="logout">Salir</string>
    <string name="login">Acceder</string>
    <string name="healthjourney">HealthJourney</string>
    <string name="logo_healthjourney_app">Logo HealthJourney App</string>
    <string name="button_back">REGRESAR</string>
    <string name="cardi_logo">CARDIÓLOGO</string>
    <string name="surgeon_logo">CIRUJANO</string>
    <string name="family_doctor">MÉDICO FAMILIAR</string>
    <string name="description_logos">Logo de especialidad médica</string>
    <string name="nutricionist">NUTRICIONISTA</string>
    <string name="dentist">DENTISTA</string>
    <string name="find_doctor">BUSCAR DOCTOR</string>
    <string name="healthjourney_title">HealthJourney</string>
    <string name="farmacias_general_paz">IR A FARMACIAS GENERAL PAZ</string>
    <string name="farmacity">IR A FARMACITY</string>
    <string name="farmacias_l_der">IR A FARMACIAS LIDER</string>
    <string name="farmacias_title">FARMACIAS</string>
    <string name="ex_menes">EXÁMENES</string>
    <string name="video_tutorial">VIDEO TUTORIAL</string>
    <string name="articulos_de_salud">ARTICULOS DE SALUD</string>
    <string name="articulos_de_salud_ejercios">EJERCIOS SALUDABLES</string>
    <string name="articulos_de_salud_recetas">RECETAS SALUDABLES</string>
    <string name="articulos_de_salud_prevencion">PREVENSION DE ENFEREMEDADES</string>
    <string name="nombre_completo">Nombre completo</string>
    <string name="direcci_n">Dirección</string>
    <string name="numero_de_contacto">Numero de contacto</string>
    <string name="textViewDDName">Healthjourney</string>
    <string name="detalle_del_profecional">Detalle del profesional</string>
    <string name="detalle">detalle del profesional</string>
    <string name="iniciar_la_reproduccion">Iniciar la reproduccion</string>
</resources>