<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back2"
    tools:context=".BookAppointmentActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:text="@string/healthjourney"
        android:textColor="#fff"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:ignore="ObsoleteLayoutParam" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/detalle_del_profecional"
        android:textColor="#fff"
        android:textSize="20sp"
        android:textStyle="bold" />

        <TextView
            android:id="@+id/name"
            android:hint="@string/nombre_completo"
            android:textColorHint="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <TextView
            android:id="@+id/direccion"
            android:hint="@string/direcci_n"
            android:textColorHint="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/numero"
        android:hint="@string/numero_de_contacto"
        android:textColorHint="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />




    <Button
        android:id="@+id/buttonDDBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_back"
        android:backgroundTint="@color/cardview_dark_background"
        android:layout_marginTop="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.69" />



</LinearLayout>