<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back2"
    tools:context=".BuyMedicineActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:text="@string/healthjourney"
        android:textColor="#fff"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/titleFindDoctorTop"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:text="@string/articulos_de_salud"
        android:textColor="#fff777"
        android:textSize="20sp"
        android:textStyle="bold" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/titleFindDoctorTop"
        android:layout_margin="20dp"
        android:columnCount="2"
        android:rowCount="3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="30dp"
            android:gravity="center">

            <Button
                android:id="@+id/button_ejercicios"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/articulos_de_salud_ejercios"
                android:backgroundTint="@color/cardview_dark_background"/>

            <Button
                android:id="@+id/button_recetas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/articulos_de_salud_recetas"
                android:backgroundTint="@color/cardview_dark_background"/>

            <Button
                android:id="@+id/button_prevencion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/articulos_de_salud_prevencion"
                android:backgroundTint="@color/cardview_dark_background"/>

            <Button
                android:id="@+id/buttonDDBack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_back"
                android:backgroundTint="@color/cardview_dark_background"
                android:layout_marginTop="200dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintVertical_bias="0.69" />


        </LinearLayout>



    </GridLayout>


</RelativeLayout>

